# AMR

./: .gitignore  AMR_Codebase_Overview.html  CLAUDE.md  CODEOWNERS
AMR_Engine_Package/: .gitignore
AMR_Engine_Package/install/: local_setup.sh  setup.sh
AMR_Engine_Package/install/amr_charging/share/amr_charging/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
AMR_Engine_Package/install/amr_command/share/amr_command/: package.xml
AMR_Engine_Package/install/amr_msgs/include/amr_msgs/amr_msgs/action/: move_lift.h  move_lift.hpp  navigate_to_goal.h  navigate_to_goal.hpp
AMR_Engine_Package/install/amr_msgs/include/amr_msgs/amr_msgs/msg/: encoder_ticks.h  encoder_ticks.hpp  lift_command.h  lift_command.hpp  lift_state.h  lift_state.hpp  pico_status.h  (+5 more)
AMR_Engine_Package/install/amr_msgs/share/amr_msgs/: local_setup.sh  package.sh
AMR_Engine_Package/install/amr_msgs/share/amr_msgs/action/: MoveLift.action  MoveLift.idl  NavigateToGoal.action  NavigateToGoal.idl
AMR_Engine_Package/install/amr_msgs/share/amr_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  amr_msgsConfig.cmake  amr_msgs__rosidl_typesupport_cExport.cmake  amr_msgs__rosidl_typesupport_cppExport.cmake  amr_msgs__rosidl_typesupport_introspection_cExport.cmake  amr_msgs__rosidl_typesupport_introspection_cppExport.cmake  export_amr_msgs__rosidl_generator_cExport.cmake  export_amr_msgs__rosidl_generator_cppExport.cmake  export_amr_msgs__rosidl_generator_pyExport.cmake  export_amr_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_amr_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake
AMR_Engine_Package/install/amr_msgs/share/amr_msgs/msg/: EncoderTicks.idl  LiftCommand.idl  LiftState.idl  PicoStatus.idl  SignalCommand.idl  SignalCommand.msg  WheelSetpoints.idl  WheelSetpoints.msg
AMR_Engine_Package/install/amr_msgs/share/amr_msgs/srv/: AcknowledgeFault.idl  AcknowledgeFault.srv  AcknowledgeFault_Request.msg  GetPicoStatus.idl  GetPicoStatus.srv  GetPicoStatus_Response.msg  GetRobotState.idl  GetRobotState.srv  GetRobotState_Response.msg  ResetOdometry.idl  SetDriveLimits.idl  SetDriveLimits_Request.msg  SetLiftTarget.idl  SetLiftTarget.srv  SetLiftTarget_Request.msg  TriggerEstop.idl  TriggerEstop.srv  TriggerEstop_Request.msg
AMR_Engine_Package/install/amr_navigation_imu/share/amr_navigation_imu/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
AMR_Engine_Package/install/amr_navigation_move/share/amr_navigation_move/: package.xml
AMR_Engine_Package/install/amr_pico_bridge/share/amr_pico_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
AMR_Engine_Package/log/: latest_build  latest_list
AMR_Engine_Package/pico_firmware/: actuator_control.py  comms_protocol.py  config.py  encoder_reader.py  main.py  motor_driver.py  signal_io.py  watchdog.py
AMR_Engine_Package/src/amr_charging/: setup.cfg  setup.py
AMR_Engine_Package/src/amr_charging/amr_charging/: bms_node.py  bms_protocol.py
AMR_Engine_Package/src/amr_command/: setup.cfg  setup.py
AMR_Engine_Package/src/amr_command/amr_command/: command_gateway_node.py  map_encoder.py  websocket_server.py
AMR_Engine_Package/src/amr_command/test/: test_map_encoder.py
AMR_Engine_Package/src/amr_description/: CMakeLists.txt  package.xml
AMR_Engine_Package/src/amr_description/launch/: description.launch.py
AMR_Engine_Package/src/amr_description/urdf/: amr.urdf.xacro
AMR_Engine_Package/src/amr_engine/: package.xml  setup.cfg  setup.py
AMR_Engine_Package/src/amr_engine/amr_engine/: amr_engine.py  diagnostics_aggregator.py  state_machine_node.py
AMR_Engine_Package/src/amr_engine/launch/: amr_engine.launch.py
AMR_Engine_Package/src/amr_error/: package.xml  setup.cfg  setup.py
AMR_Engine_Package/src/amr_error/amr_error/: fault_pattern_table.py  signal_system_node.py
AMR_Engine_Package/src/amr_error/test/: test_fault_injector.py  test_signal_system_node.py
AMR_Engine_Package/src/amr_lift/: package.xml  setup.cfg  setup.py
AMR_Engine_Package/src/amr_lift/amr_lift/: fake_lift_pico_node.py  lift_control_node.py
AMR_Engine_Package/src/amr_lift/launch/: lift_sim.launch.py
AMR_Engine_Package/src/amr_msgs/: CMakeLists.txt  package.xml
AMR_Engine_Package/src/amr_msgs/msg/: EncoderTicks.msg  FaultCodes.msg  LiftCommand.msg  LiftState.msg  PicoStatus.msg  WheelSetpoints.msg
AMR_Engine_Package/src/amr_msgs/srv/: SetDriveLimits.srv
AMR_Engine_Package/src/amr_navigation/imu/: CMakeLists.txt  package.xml
AMR_Engine_Package/src/amr_navigation/lidar/amr_navigation_lidar/: package.xml  setup.cfg  setup.py
AMR_Engine_Package/src/amr_navigation/lidar/amr_navigation_lidar/amr_navigation_lidar/: fake_scan_publisher.py
AMR_Engine_Package/src/amr_navigation/lidar/amr_navigation_lidar/launch/: fake_scan.launch.py  lidar_driver.launch.py  static_tf.launch.py
AMR_Engine_Package/src/amr_navigation/map/: CMakeLists.txt  README.md  package.xml
AMR_Engine_Package/src/amr_navigation/map/config/: nav2_params.yaml  slam_sim.rviz  slam_toolbox_localization_params.yaml  slam_toolbox_params.yaml
AMR_Engine_Package/src/amr_navigation/map/launch/: localization.launch.py  nav2.launch.py  nav2_sim.launch.py  sim.launch.py  slam.launch.py
AMR_Engine_Package/src/amr_navigation/map/maps/: README.md
AMR_Engine_Package/src/amr_navigation/map/test_scripts/: fake_scan_publisher.py
AMR_Engine_Package/src/amr_navigation/map/urdf/: amr.urdf
AMR_Engine_Package/src/amr_navigation/move/: package.xml  setup.cfg  setup.py
AMR_Engine_Package/src/amr_navigation/move/amr_navigation_move/: diff_drive_kinematics.py  drive_controller_node.py  fake_pico_node.py  odometry_node.py
AMR_Engine_Package/src/amr_pico_bridge/: setup.cfg  setup.py
AMR_Engine_Package/src/amr_pico_bridge/amr_pico_bridge/: bridge_node.py  protocol_codec.py  serial_transport.py
AMR_Operator_Console/frontend/: index.html
AMR_Operator_Console/frontend/src/: battery_panel.js  map_panel.js  map_renderer.js  path_draw.js  status_panel.js  style.css  teleop_control.js  ws_client.js
(+226 files in other folders)
