<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_engine</name>
  <version>0.0.1</version>
  <description>Coordinates the AMR: top-level launch file that loads every package, and a supervisor state machine (IDLE/NAVIGATING/LIFTING/ERROR) that aggregates diagnostics across the stack.</description>
  <maintainer email="rushiljuneja@gmail.com">Rushil Juneja</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>amr_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <exec_depend>amr_pico_bridge</exec_depend>
  <exec_depend>amr_lift</exec_depend>
  <exec_depend>amr_navigation_move</exec_depend>
  <exec_depend>amr_navigation_map</exec_depend>
  <exec_depend>amr_error</exec_depend>
  <exec_depend>amr_charging</exec_depend>
  <exec_depend>amr_command</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
