<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_lift</name>
  <version>0.0.1</version>
  <description>Linear actuator (lift) target/state coordination. PWM, limit switches, and the position PID loop live on the Pico; this package decides what height to go to and reports state.</description>
  <maintainer email="rushiljuneja@gmail.com">Rushil Juneja</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>amr_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
