<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_navigation_imu</name>
  <version>0.0.1</version>
  <description>Placeholder for IMU driver/filter integration, in case IMU-based localization is used instead of (or alongside) SLAM Toolbox.</description>
  <maintainer email="rushiljuneja@gmail.com">Rushil Juneja</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
