<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_charging</name>
  <version>0.0.1</version>
  <description>BMS telemetry. Talks directly to the RPi over its own UART/I2C link (not through the Pico) and publishes sensor_msgs/BatteryState plus low-battery/fault events.</description>
  <maintainer email="rushiljuneja@gmail.com">Rushil Juneja</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
